--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>Uri Onderwijzer FED2425</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
@@ -14,6 +14,7 @@
 
 <body>
 
+<section>
 	<header>
 		<nav>
 			<ul>
@@ -24,9 +25,11 @@
 			</ul>
 		</nav>
 	</header>
+</section>	
 
 	<main>
 
+<section>
 		<img src="images/mainfotoo1.png" alt="main foto 1">
 
 		<h1>We Play Different</h1>
@@ -35,40 +38,59 @@
 
 		<button class="black-button">Heren</button>
 		<button class="black-button">Dames</button>
+</section>
 
+<section>
 		<img src="images/main-foto2.png" alt="main foto 2">
 
 		<h2>Buitenlagen voor veranderend weer</h2>
 
 		<button class="black-button2">Dames</button>
 		<button class="black-button2">Heren</button>
+</section>
 
+<section>
 		<img src="images/main-foto3.png" alt="2 kinderen die een jas dragen">
 
 		<p>Ingepakt en klaar om op avontuur te gaan.</p>
 
 		<button class="black-button3">Jongens</button>
 		<button class="black-button3">Meisjes</button>
+</section>
 
+<section>
 		<img src="images/main-foto4.png" alt="Jongen die een fleecejas draagt">
 
 		<p>Welkom bij het fleeceseizoen.</p>
 
 		<button class="black-button3">Heren</button>
 		<button class="black-button3">Dames</button>
+</section>
 
+<section>
 		<ul class="carrousellist">
 		<li><img src="images/crfoto1.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto1"></li>
 		<li><img src="images/crfoto2.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto2"></li>
 		</ul>
 
 		<button class="white-button1">Triclimate heren</button>
+</section>
 
-		<p class="middentekst">Word lid van XPLR Pass</p>
+<section>
+		<h2 class="middentekst">Word lid van XPLR Pass</h2>
 
 		<p class="kleinetekst">Doe mee met ons lidmaadschapsprogramma.</p>
 
 		<button class="black-button">Word lid nu</button>
+</section>
+		<nav>
+			<ul>
+				<li>
+
+				</li>
+			</ul>
+		</nav>
+
 
 	</main>
 
