--- a/index.html
+++ b/index.html
@@ -69,11 +69,24 @@
 
 <section>
 		<ul class="carrousellist">
-		<li><img src="images/crfoto1.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto1"></li>
-		<li><img src="images/crfoto2.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto2"></li>
+		<li>
+			<img src="images/crfoto1.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto1">
+			<button class="carousel-button">Triclimate heren</button>
+		</li>
+		<li>
+			<img src="images/crfoto2.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto2">
+			<button class="carousel-button2">Jassen voor heren</button>
+		</li>
+		<li>
+			<img src="images/crfoto3.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto2">
+			<button class="carousel-button">Jassen voor dames</button>
+		</li>
+		<li>
+			<img src="images/crfoto4.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto4">
+			<button class="carousel-button">Schoenen</button>
+		</li>
 		</ul>
 
-		<button class="white-button1">Triclimate heren</button>
 </section>
 
 <section>
@@ -83,13 +96,7 @@
 
 		<button class="black-button">Word lid nu</button>
 </section>
-		<nav>
-			<ul>
-				<li>
 
-				</li>
-			</ul>
-		</nav>
 
 
 	</main>
