--- a/index.html
+++ b/index.html
@@ -9,95 +9,108 @@
 	<title>Uri Onderwijzer FED2425</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<link href="styles/stylehome.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
 
-<section>
 	<header>
+
+		<!-- HAMBURGER MENU -->
 		<nav>
 			<ul>
-				<li><img src="images/tnflogo.png" alt="North Face lgo" class="logo"></a></li>
-				<li><img src="images/zoeklogo.png" alt="zoekicoon" class="search-icon"></a></li>
-				<li><img src="images/taslogo.png" alt="winkeltas" class="cart-icon"></a></li>				
-				<li><img src="images/menulogo.png" alt="menu" class="menu-icon"></li>
+				<li><img src="images/tnflogo.png" alt="North Face logo"></a></li>
+				<li><img src="images/zoeklogo.png" alt="zoekicoon"></a></li>
+				<li><img src="images/taslogo.png" alt="winkeltas"></a></li>				
+				<li><img src="images/menulogo.png" alt="menu"></li>
 			</ul>
 		</nav>
-	</header>
-</section>	
+	</header>	
 
 	<main>
 
-<section>
+
+<!-- MAIN SECTION TYPE 1 -->
+<section> 
 		<img src="images/mainfotoo1.png" alt="main foto 1">
 
 		<h1>We Play Different</h1>
 
 		<p>The North Face® Offtrail GORE-TEX®</p>
 
-		<button class="black-button">Heren</button>
-		<button class="black-button">Dames</button>
+		<button>Heren</button>
+		<button>Dames</button>
 </section>
 
+<!-- MAIN SECTION TYPE 2 -->
 <section>
 		<img src="images/main-foto2.png" alt="main foto 2">
 
 		<h2>Buitenlagen voor veranderend weer</h2>
 
-		<button class="black-button2">Dames</button>
-		<button class="black-button2">Heren</button>
+		<button>Dames</button>
+		<button>Heren</button>
 </section>
 
+<!-- MAIN SECTION TYPE 3 -->
 <section>
 		<img src="images/main-foto3.png" alt="2 kinderen die een jas dragen">
 
 		<p>Ingepakt en klaar om op avontuur te gaan.</p>
 
-		<button class="black-button3">Jongens</button>
-		<button class="black-button3">Meisjes</button>
+		<button>Jongens</button>
+		<button>Meisjes</button>
 </section>
 
+<!-- MAIN SECTION TYPE 4 -->
 <section>
 		<img src="images/main-foto4.png" alt="Jongen die een fleecejas draagt">
 
 		<p>Welkom bij het fleeceseizoen.</p>
 
-		<button class="black-button3">Heren</button>
-		<button class="black-button3">Dames</button>
+		<button>Heren</button>
+		<button>Dames</button>
 </section>
 
+<!-- MAIN SECTION TYPE 5 -->
 <section>
-		<ul class="carrousellist">
+		<ul>
 		<li>
-			<img src="images/crfoto1.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto1">
-			<button class="carousel-button">Triclimate heren</button>
+			<img src="images/crfoto1.png" alt="Carroucel foto van een jongen die een jas draagt">
+			<button>Triclimate heren</button>
 		</li>
 		<li>
-			<img src="images/crfoto2.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto2">
-			<button class="carousel-button2">Jassen voor heren</button>
+			<img src="images/crfoto2.png" alt="Carroucel foto van een jongen die een jas draagt">
+			<button>Jassen voor heren</button>
 		</li>
 		<li>
-			<img src="images/crfoto3.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto2">
-			<button class="carousel-button">Jassen voor dames</button>
+			<img src="images/crfoto3.png" alt="Carroucel foto van een jongen die een jas draagt">
+			<button>Jassen voor dames</button>
 		</li>
 		<li>
-			<img src="images/crfoto4.png" alt="Carroucel foto van een jongen die een jas draagt" class="carrouselfoto4">
-			<button class="carousel-button">Schoenen</button>
+			<img src="images/crfoto4.png" alt="Carroucel foto van een jongen die een jas draagt">
+			<button>Schoenen</button>
 		</li>
 		</ul>
 
 </section>
 
+<!-- MAIN SECTION TYPE 6 -->
 <section>
-		<h2 class="middentekst">Word lid van XPLR Pass</h2>
+		<h2>Word lid van XPLR Pass</h2>
 
-		<p class="kleinetekst">Doe mee met ons lidmaadschapsprogramma.</p>
+		<p>Doe mee met ons lidmaadschapsprogramma.</p>
 
-		<button class="black-button">Word lid nu</button>
+		<button>Word lid nu</button>
 </section>
 
+<!-- MAIN SECTION TYPE 7 -->
+<section>
 
+<button>WINKELEN <img src="images/dropdownicon.png" alt="Carroucel foto van een jongen die een jas draagt"></button>
+
+</section>
 
 	</main>
 
