--- a/index.html
+++ b/index.html
@@ -108,7 +108,53 @@
 <!-- MAIN SECTION TYPE 7 -->
 <section>
 
-<button>WINKELEN <img src="images/dropdownicon.png" alt="Carroucel foto van een jongen die een jas draagt"></button>
+	<details>
+		<summary>WINKELEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+		<ul>
+		  <li>Heren</li>
+		  <li>Dames</li>
+		  <li>Kids</li>
+		  <li>Tassen & Uitrusting</li>
+		  <li>Schoenen</li>
+		</ul>
+	  </details>
+
+	  <details>
+		<summary>BESTELLINGEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+		<ul>
+		  <li>Track jouw Order</li>
+		  <li>Verzending</li>
+		  <li>Retourneren</li>
+		  <li>Korting voor studenten</li>
+		</ul>
+	  </details>
+
+	  <details>
+		<summary>HELP <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+		<ul>
+		  <li>Contact</li>
+		  <li>Veelgestelde Vragen</li>
+		  <li>Garantie</li>
+		  <li>Gebruikersvoorwaarden</li>
+		  <li>Privacybeleid</li>
+		  <li>Maattabellen</li>
+		  <li>Cookievoorkeuren</li>
+		  <li>Conformiteitsverklaring</li>
+		</ul>
+	  </details>
+
+	  <details>
+		<summary>OVER ONS <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+		<ul>
+		  <li>Onze Geschiedenis</li>
+		  <li>Duurzaamheid</li>
+		  <li>Sporters</li>
+		  <li>Technologie</li>
+		  <li>Word Lid Van XPLR Pass</li>
+		  <li>The North Face Pro Programme</li>
+		  <li>Werken Bij The North Face</li>
+		</ul>
+	  </details>
 
 </section>
 
