--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 	<header>
 
 		<!-- HAMBURGER MENU -->
+
 		<nav>
 			<ul>
-				<li><img src="images/tnflogo.png" alt="North Face logo"></a></li>
-				<li><img src="images/zoeklogo.png" alt="zoekicoon"></a></li>
-				<li><img src="images/taslogo.png" alt="winkeltas"></a></li>				
+				<li><img src="images/tnflogo.png" alt="North Face logo"></li>
+				<li><img src="images/zoeklogo.png" alt="zoekicoon"></li>
+				<li><img src="images/taslogo.png" alt="winkeltas"></li>				
 				<li><img src="images/menulogo.png" alt="menu"></li>
 			</ul>
 		</nav>
@@ -105,65 +106,126 @@
 		<button>Word lid nu</button>
 </section>
 
-<!-- MAIN SECTION TYPE 7 -->
-<section>
+</main>
 
-	<details>
-		<summary>WINKELEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+<footer>
+
+
+	<section>
+
+		<details>
+			<summary>WINKELEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<ul>
+				  <li>Heren</li>
+				  <li>Dames</li>
+				  <li>Kids</li>
+				  <li>Tassen & Uitrusting</li>
+				  <li>Schoenen</li>
+				</ul>
+		</details>
+		
+		<details>
+			<summary>BESTELLINGEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<ul>
+				  <li>Track jouw Order</li>
+				  <li>Verzending</li>
+				  <li>Retourneren</li>
+				  <li>Korting voor studenten</li>
+				</ul>
+		</details>
+		
+		<details>
+			<summary>HELP <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<ul>
+				  <li>Contact</li>
+				  <li>Veelgestelde Vragen</li>
+				  <li>Garantie</li>
+				  <li>Gebruikersvoorwaarden</li>
+				  <li>Privacybeleid</li>
+				  <li>Maattabellen</li>
+				  <li>Cookievoorkeuren</li>
+				  <li>Conformiteitsverklaring</li>
+				</ul>
+		</details>
+		
+		<details>
+			<summary>OVER ONS <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<ul>
+				  <li>Onze Geschiedenis</li>
+				  <li>Duurzaamheid</li>
+				  <li>Sporters</li>
+				  <li>Technologie</li>
+				  <li>Word Lid Van XPLR Pass</li>
+				  <li>The North Face Pro Programme</li>
+				  <li>Werken Bij The North Face</li>
+				</ul>
+		</details>
+		
+	</section>
+
+	<section>
 		<ul>
-		  <li>Heren</li>
-		  <li>Dames</li>
-		  <li>Kids</li>
-		  <li>Tassen & Uitrusting</li>
-		  <li>Schoenen</li>
+			<li><img src="images/tnflogo.png" alt="North Face logo"></a></li>
+			<li><img src="images/zoeklogo.png" alt="zoekicoon"></a></li>
+			<li><img src="images/taslogo.png" alt="winkeltas"></a></li>				
+			<li><img src="images/menulogo.png" alt="menu"></li>
 		</ul>
-	  </details>
+	</section>
 
-	  <details>
-		<summary>BESTELLINGEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+	<!-- FOOTER SECTION 3 -->
+	<section>
+		<h2>Abonneer u op onze nieuwsbrief</h2>
+
+		<p>Ontvang productnieuws en updates in je inbox</p>
+
+		<form>
+			<label for="email"></label>
+			<input type="email" id="email" name="email" placeholder="E-mailadres*" required>
+		</form>
+
+		<input type="checkbox" id="myCheckbox">
+		<label for="myCheckbox">Ik bevestig dat ik het privacybeleid heb gelezen en begrepen en 
+			ik geef toestemming voor de verwerking van mijn persoonlijke gegevens voor marketing- 
+			en profileringsdoeleinden.*</label>
+
+		<button>Schrijf Je In</button>
+
+	</section>
+
+	<!-- FOOTER SECTION 4 -->
+	<section>
+		<h2>Vind een winkel</h2>
+
+		<p>Vind een The North Face winkel in de buurt</p>
+
+		<button>Zoek winkel</button>
+	</section>
+
+	<!-- FOOTER SECTION 5 -->
+	<section>
+		<h2>Volg The North Face</h2>
+
 		<ul>
-		  <li>Track jouw Order</li>
-		  <li>Verzending</li>
-		  <li>Retourneren</li>
-		  <li>Korting voor studenten</li>
+			<li><img src="images/taslogo.png" alt="winkeltas"></li>
+			<li><img src="images/taslogo.png" alt="winkeltas"></li>
+			<li><img src="images/taslogo.png" alt="winkeltas"></li>
+			<li><img src="images/taslogo.png" alt="winkeltas"></li>
 		</ul>
-	  </details>
 
-	  <details>
-		<summary>HELP <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+	</section>
+
+	<!-- FOOTER SECTION 6 -->
+	<section>
+
 		<ul>
-		  <li>Contact</li>
-		  <li>Veelgestelde Vragen</li>
-		  <li>Garantie</li>
-		  <li>Gebruikersvoorwaarden</li>
-		  <li>Privacybeleid</li>
-		  <li>Maattabellen</li>
-		  <li>Cookievoorkeuren</li>
-		  <li>Conformiteitsverklaring</li>
+			<li>NL | Wijzig Land</li>
+			<li>Privacy Policy</li>
+			<li>Gebruikersvoorwaarden</li>
 		</ul>
-	  </details>
 
-	  <details>
-		<summary>OVER ONS <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-		<ul>
-		  <li>Onze Geschiedenis</li>
-		  <li>Duurzaamheid</li>
-		  <li>Sporters</li>
-		  <li>Technologie</li>
-		  <li>Word Lid Van XPLR Pass</li>
-		  <li>The North Face Pro Programme</li>
-		  <li>Werken Bij The North Face</li>
-		</ul>
-	  </details>
+	</section>
 
-</section>
-
-	</main>
-
-	<footer>
-
-
-	</footer>
+</footer>
 
 
 
