--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
 		<nav>
 			<ul>
-				<li><img src="images/tnflogo.png" alt="North Face logo"></li>
-				<li><img src="images/zoeklogo.png" alt="zoekicoon"></li>
-				<li><img src="images/taslogo.png" alt="winkeltas"></li>				
-				<li><img src="images/menulogo.png" alt="menu"></li>
+				<li><a href="#" aria-label="Homepage"><img src="images/tnflogo.png" alt=""></a></li>
+				<li><a href="#" aria-label="zoekicoon"></a><img src="images/zoeklogo.png" alt=""></li>
+				<li><a href="#" aria-label="winkelwagen"></a><img src="images/taslogo.png" alt=""></li>				
+				<li><a href="#" aria-label="Hamburgermenu"></a><img src="images/menulogo.png" alt=""></li>
 			</ul>
 		</nav>
 	</header>	
@@ -93,7 +93,11 @@
 
 		<h1>We Play Different</h1>
 
+		<!-- KOPJES BOVEN IMG -->
+
 		<p>The North Face® Offtrail GORE-TEX®</p>
+
+		<a href="page2index.html">2epage</a>
 
 		<button>Heren</button>
 		<button>Dames</button>
@@ -129,7 +133,7 @@
 		<button>Dames</button>
 </section>
 
-<!-- MAIN SECTION TYPE 5 -->
+<!-- MAIN SECTION TYPE 5 carrousel -->
 <section>
 		<ul>
 		<li>
@@ -152,20 +156,26 @@
 
 </section>
 
-<!-- MAIN SECTION TYPE 6 -->
-<section>
-		<h2>Word lid van XPLR Pass</h2>
-
-		<p>Doe mee met ons lidmaadschapsprogramma.</p>
-
-		<button>Word lid nu</button>
-</section>
 
 </main>
 
 <footer>
 
+	<!-- HOOFDLETTERS VIA CSS -->
 
+	<!-- FOOTER SECTION 1 -->
+
+	<section>
+		<h2>Word lid van XPLR Pass</h2>
+
+		<p>Doe mee met ons lidmaadschapsprogramma.</p>
+
+		<button>Word lid nu</button>
+	</section>
+
+
+
+	<!-- FOOTER SECTION 2 -->
 	<section>
 
 		<details>
@@ -218,6 +228,8 @@
 		
 	</section>
 
+	<!-- FOOTER SECTION 3 -->
+
 	<section>
 		<ul>
 			<li><img src="images/tnflogo.png" alt="North Face logo"></a></li>
@@ -227,7 +239,7 @@
 		</ul>
 	</section>
 
-	<!-- FOOTER SECTION 3 -->
+	<!-- FOOTER SECTION 4 -->
 	<section>
 		<h2>Abonneer u op onze nieuwsbrief</h2>
 
@@ -247,7 +259,7 @@
 
 	</section>
 
-	<!-- FOOTER SECTION 4 -->
+	<!-- FOOTER SECTION 5 -->
 	<section>
 		<h2>Vind een winkel</h2>
 
@@ -256,20 +268,20 @@
 		<button>Zoek winkel</button>
 	</section>
 
-	<!-- FOOTER SECTION 5 -->
+	<!-- FOOTER SECTION 6 -->
 	<section>
 		<h2>Volg The North Face</h2>
 
 		<ul>
-			<li><img src="images/taslogo.png" alt="winkeltas"></li>
-			<li><img src="images/taslogo.png" alt="winkeltas"></li>
-			<li><img src="images/taslogo.png" alt="winkeltas"></li>
-			<li><img src="images/taslogo.png" alt="winkeltas"></li>
+			<li><img src="images/fbicon.png" alt="winkeltas"></li>
+			<li><img src="images/instaicon.png" alt="winkeltas"></li>
+			<li><img src="images/twittericon.png" alt="winkeltas"></li>
+			<li><img src="images/yticon.png" alt="winkeltas"></li>
 		</ul>
 
 	</section>
 
-	<!-- FOOTER SECTION 6 -->
+	<!-- FOOTER SECTION 7 -->
 	<section>
 
 		<ul>
