--- a/index.html
+++ b/index.html
@@ -21,18 +21,37 @@
     
 		<nav>
 			<details>
-				<summary>WINKELEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<summary>Heren <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 					<ul>
-					  <li>Heren</li>
-					  <li>Dames</li>
-					  <li>Kids</li>
-					  <li>Tassen & Uitrusting</li>
-					  <li>Schoenen</li>
+					  <li>Shop Alle Heren</li>
+					  <li>Nieuwe aanwinsten</li>
+					  <li>Bestsellers</li>
+					  <li>Bundels</li>
+					  <li>Nieuwste collecties</li>
+					  <li>Cadeaus voor hem</li>
+					  <li>Jassen</li>
+					  <li>Tops</li>
+					  <li>Broeken</li>
+					  	<details>
+						<summary>Schoenen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+							<ul>
+						  		<li>Shop Alle Schoenen</li>
+						  		<li>Wandel- en trekkingsschoenen</li>
+						  		<li>Trail- & Hardloopschoenen</li>
+								<li>Casual boots & Schoenen</li>
+						  		<li>Badslippers, Sandalen & Instappers</li>
+						  		<li><a href="page2index.html" aria-label="productpage">Winterschoenen</a></li>
+							</ul>
+					  	</details>
+					  <li>Accessoires</li>
+					  <li>Activiteiten</li>
+					  <li>Collecties</li>
+					  <li>Outlet</li>
 					</ul>
 			</details>
 			
 			<details>
-				<summary>BESTELLINGEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<summary>Dames <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 					<ul>
 					  <li>Track jouw Order</li>
 					  <li>Verzending</li>
@@ -42,7 +61,7 @@
 			</details>
 			
 			<details>
-				<summary>HELP <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<summary>Kinderen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 					<ul>
 					  <li>Contact</li>
 					  <li>Veelgestelde Vragen</li>
@@ -56,7 +75,7 @@
 			</details>
 			
 			<details>
-				<summary>OVER ONS <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<summary>Schoenen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 					<ul>
 					  <li>Onze Geschiedenis</li>
 					  <li>Duurzaamheid</li>
@@ -66,20 +85,55 @@
 					  <li>The North Face Pro Programme</li>
 					  <li>Werken Bij The North Face</li>
 					</ul>
-			</details>			
+			</details>		
+			
+			<details>
+				<summary>Tassen & Uitrusting <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+					<ul>
+					  <li>The North Face Pro Programme</li>
+					  <li>Werken Bij The North Face</li>
+					</ul>
+			</details>	
+
+			<details>
+				<summary>Outlet <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+					<ul>
+					  <li>The North Face Pro Programme</li>
+					  <li>Werken Bij The North Face</li>
+					</ul>
+			</details>	
+
+			<details>
+				<summary>Werken <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+					<ul>
+					  <li>The North Face Pro Programme</li>
+					  <li>Werken Bij The North Face</li>
+					</ul>
+			</details>	
+			
+
 		</nav>
 		
-
+	<!-- EINDE HAMBURGER MENU -->
 
 
 
 
 		<nav>
 			<ul>
-				<li><a href="#" aria-label="Homepage"><img src="images/tnflogo.png" alt=""></a></li>
+				<li><a href="index.html" aria-label="Homepage"><img src="images/tnflogo.png" alt=""></a></li>
 				<li><a href="#" aria-label="zoekicoon"></a><img src="images/zoeklogo.png" alt=""></li>
-				<li><a href="#" aria-label="winkelwagen"></a><img src="images/taslogo.png" alt=""></li>				
-				<li><a href="#" aria-label="Hamburgermenu"></a><img src="images/menulogo.png" alt=""></li>
+				<li><a href="#" aria-label="winkelwagen"></a><img src="images/taslogo.png" alt=""></li>	
+
+				<li><a href="#" aria-label="Hamburgermenu"></a>
+					<!-- <img src="images/menulogo.png" alt=""> -->
+					<svg width="176" height="134" viewBox="0 0 176 134" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M5.17151 133.075H170.172C171.63 133.075 173.029 132.496 174.061 131.464C175.092 130.433 175.672 129.034 175.672 127.575C175.672 126.117 175.092 124.718 174.061 123.686C173.029 122.655 171.63 122.075 170.172 122.075H5.17151C3.71282 122.075 2.31387 122.655 1.28242 123.686C0.250973 124.718 -0.328491 126.117 -0.328491 127.575C-0.328491 129.034 0.250973 130.433 1.28242 131.464C2.31387 132.496 3.71282 133.075 5.17151 133.075Z" fill="#231F20"/>
+						<path d="M38.8253 72.7368H170.5C171.959 72.7368 173.358 72.1573 174.389 71.1259C175.421 70.0944 176 68.6955 176 67.2368C176 65.7781 175.421 64.3791 174.389 63.3477C173.358 62.3162 171.959 61.7368 170.5 61.7368H38.8253C37.3666 61.7368 35.9677 62.3162 34.9362 63.3477C33.9048 64.3791 33.3253 65.7781 33.3253 67.2368C33.3253 68.6955 33.9048 70.0944 34.9362 71.1259C35.9677 72.1573 37.3666 72.7368 38.8253 72.7368Z" fill="#231F20"/>
+						<path d="M67.8842 11.9247H170.348C171.807 11.9247 173.206 11.3452 174.237 10.3138C175.269 9.28232 175.848 7.88337 175.848 6.42467C175.848 4.96598 175.269 3.56704 174.237 2.53559C173.206 1.50414 171.807 0.924683 170.348 0.924683H67.8842C66.4255 0.924683 65.0265 1.50414 63.9951 2.53559C62.9636 3.56704 62.3842 4.96598 62.3842 6.42467C62.3842 7.88337 62.9636 9.28232 63.9951 10.3138C65.0265 11.3452 66.4255 11.9247 67.8842 11.9247Z" fill="#231F20"/>
+						</svg>						
+				</li>
+
 			</ul>
 		</nav>
 	</header>	
@@ -89,15 +143,16 @@
 
 <!-- MAIN SECTION TYPE 1 -->
 <section> 
-		<img src="images/mainfotoo1.png" alt="main foto 1">
+
+		<video controls>
+			<source src="images/videotnf.mp4" type="video/mp4">
+		  </video>
 
 		<h1>We Play Different</h1>
 
-		<!-- KOPJES BOVEN IMG -->
-
 		<p>The North Face® Offtrail GORE-TEX®</p>
 
-		<a href="page2index.html">2epage</a>
+
 
 		<button>Heren</button>
 		<button>Dames</button>
@@ -115,6 +170,8 @@
 
 <!-- MAIN SECTION TYPE 3 -->
 <section>
+		<h2 class="visually-hidden">Producten voor kinderen</h2>
+
 		<img src="images/main-foto3.png" alt="2 kinderen die een jas dragen">
 
 		<p>Ingepakt en klaar om op avontuur te gaan.</p>
@@ -125,6 +182,8 @@
 
 <!-- MAIN SECTION TYPE 4 -->
 <section>
+	<h2 class="visually-hidden">Fleecejassen</h2>
+
 		<img src="images/main-foto4.png" alt="Jongen die een fleecejas draagt">
 
 		<p>Welkom bij het fleeceseizoen.</p>
@@ -135,6 +194,7 @@
 
 <!-- MAIN SECTION TYPE 5 carrousel -->
 <section>
+	<h2 class="visually-hidden">Carrousel met verschillende producten</h2>
 		<ul>
 		<li>
 			<img src="images/crfoto1.png" alt="Carroucel foto van een jongen die een jas draagt">
@@ -177,9 +237,10 @@
 
 	<!-- FOOTER SECTION 2 -->
 	<section>
+		<h2 class="visually-hidden">Dropdowns</h2>
 
 		<details>
-			<summary>WINKELEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Winkelen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Heren</li>
 				  <li>Dames</li>
@@ -190,7 +251,7 @@
 		</details>
 		
 		<details>
-			<summary>BESTELLINGEN <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Bestellingen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Track jouw Order</li>
 				  <li>Verzending</li>
@@ -200,7 +261,7 @@
 		</details>
 		
 		<details>
-			<summary>HELP <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Help <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Contact</li>
 				  <li>Veelgestelde Vragen</li>
@@ -214,7 +275,7 @@
 		</details>
 		
 		<details>
-			<summary>OVER ONS <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Over ons <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Onze Geschiedenis</li>
 				  <li>Duurzaamheid</li>
@@ -283,12 +344,25 @@
 
 	<!-- FOOTER SECTION 7 -->
 	<section>
+		<h2 class="visually-hidden">FAQ</h2>
 
 		<ul>
 			<li>NL | Wijzig Land</li>
 			<li>Privacy Policy</li>
 			<li>Gebruikersvoorwaarden</li>
 		</ul>
+
+		<label>
+			<input type="radio" name="theme" value="auto" checked> auto
+		   </label>
+		   <label>
+		   <input type="radio" name="theme" value="light"> licht
+		   </label>
+		   <label>
+			<input type="radio" name="theme" value="dark"> donker
+		</label> 
+		
+		<a href="page2index.html">2epage</a>
 
 	</section>
 
