--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 		<nav>
 			<details>
-				<summary>Heren <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<summary>Heren <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 					<ul>
 					  <li>Shop Alle Heren</li>
 					  <li>Nieuwe aanwinsten</li>
@@ -33,7 +33,7 @@
 					  <li>Tops</li>
 					  <li>Broeken</li>
 					  	<details>
-						<summary>Schoenen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+						<summary>Schoenen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 							<ul>
 						  		<li>Shop Alle Schoenen</li>
 						  		<li>Wandel- en trekkingsschoenen</li>
@@ -51,7 +51,7 @@
 			</details>
 			
 			<details>
-				<summary>Dames <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<summary>Dames <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 					<ul>
 					  <li>Track jouw Order</li>
 					  <li>Verzending</li>
@@ -61,7 +61,7 @@
 			</details>
 			
 			<details>
-				<summary>Kinderen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+				<summary>Kinderen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 					<ul>
 					  <li>Contact</li>
 					  <li>Veelgestelde Vragen</li>
@@ -73,45 +73,6 @@
 					  <li>Conformiteitsverklaring</li>
 					</ul>
 			</details>
-			
-			<details>
-				<summary>Schoenen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-					<ul>
-					  <li>Onze Geschiedenis</li>
-					  <li>Duurzaamheid</li>
-					  <li>Sporters</li>
-					  <li>Technologie</li>
-					  <li>Word Lid Van XPLR Pass</li>
-					  <li>The North Face Pro Programme</li>
-					  <li>Werken Bij The North Face</li>
-					</ul>
-			</details>		
-			
-			<details>
-				<summary>Tassen & Uitrusting <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-					<ul>
-					  <li>The North Face Pro Programme</li>
-					  <li>Werken Bij The North Face</li>
-					</ul>
-			</details>	
-
-			<details>
-				<summary>Outlet <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-					<ul>
-					  <li>The North Face Pro Programme</li>
-					  <li>Werken Bij The North Face</li>
-					</ul>
-			</details>	
-
-			<details>
-				<summary>Werken <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-					<ul>
-					  <li>The North Face Pro Programme</li>
-					  <li>Werken Bij The North Face</li>
-					</ul>
-			</details>	
-			
-
 		</nav>
 		
 	<!-- EINDE HAMBURGER MENU -->
@@ -121,13 +82,13 @@
 
 		<nav>
 			<ul>
-				<li><a href="index.html" aria-label="Homepage"><img src="images/tnflogo.png" alt=""></a></li>
-				<li><a href="#" aria-label="zoekicoon"></a><img src="images/zoeklogo.png" alt=""></li>
-				<li><a href="#" aria-label="winkelwagen"></a><img src="images/taslogo.png" alt=""></li>	
+				<li><a href="index.html" aria-label="Homepage"><img class="invert" src="images/tnflogo.png" alt=""></a></li>
+				<li><a href="#" aria-label="zoekicoon"></a><img class="invert" src="images/zoeklogo.png" alt=""></li>
+				<li><a href="#" aria-label="winkelwagen"></a><img class="invert" src="images/taslogo.png" alt=""></li>	
 
 				<li><a href="#" aria-label="Hamburgermenu"></a>
 					<!-- <img src="images/menulogo.png" alt=""> -->
-					<svg width="176" height="134" viewBox="0 0 176 134" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg class="invert" width="176" height="134" viewBox="0 0 176 134" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M5.17151 133.075H170.172C171.63 133.075 173.029 132.496 174.061 131.464C175.092 130.433 175.672 129.034 175.672 127.575C175.672 126.117 175.092 124.718 174.061 123.686C173.029 122.655 171.63 122.075 170.172 122.075H5.17151C3.71282 122.075 2.31387 122.655 1.28242 123.686C0.250973 124.718 -0.328491 126.117 -0.328491 127.575C-0.328491 129.034 0.250973 130.433 1.28242 131.464C2.31387 132.496 3.71282 133.075 5.17151 133.075Z" fill="#231F20"/>
 						<path d="M38.8253 72.7368H170.5C171.959 72.7368 173.358 72.1573 174.389 71.1259C175.421 70.0944 176 68.6955 176 67.2368C176 65.7781 175.421 64.3791 174.389 63.3477C173.358 62.3162 171.959 61.7368 170.5 61.7368H38.8253C37.3666 61.7368 35.9677 62.3162 34.9362 63.3477C33.9048 64.3791 33.3253 65.7781 33.3253 67.2368C33.3253 68.6955 33.9048 70.0944 34.9362 71.1259C35.9677 72.1573 37.3666 72.7368 38.8253 72.7368Z" fill="#231F20"/>
 						<path d="M67.8842 11.9247H170.348C171.807 11.9247 173.206 11.3452 174.237 10.3138C175.269 9.28232 175.848 7.88337 175.848 6.42467C175.848 4.96598 175.269 3.56704 174.237 2.53559C173.206 1.50414 171.807 0.924683 170.348 0.924683H67.8842C66.4255 0.924683 65.0265 1.50414 63.9951 2.53559C62.9636 3.56704 62.3842 4.96598 62.3842 6.42467C62.3842 7.88337 62.9636 9.28232 63.9951 10.3138C65.0265 11.3452 66.4255 11.9247 67.8842 11.9247Z" fill="#231F20"/>
@@ -240,7 +201,7 @@
 		<h2 class="visually-hidden">Dropdowns</h2>
 
 		<details>
-			<summary>Winkelen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Winkelen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Heren</li>
 				  <li>Dames</li>
@@ -251,7 +212,7 @@
 		</details>
 		
 		<details>
-			<summary>Bestellingen <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Bestellingen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Track jouw Order</li>
 				  <li>Verzending</li>
@@ -261,7 +222,7 @@
 		</details>
 		
 		<details>
-			<summary>Help <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Help <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Contact</li>
 				  <li>Veelgestelde Vragen</li>
@@ -275,7 +236,7 @@
 		</details>
 		
 		<details>
-			<summary>Over ons <img src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
+			<summary>Over ons <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
 				<ul>
 				  <li>Onze Geschiedenis</li>
 				  <li>Duurzaamheid</li>
@@ -289,18 +250,8 @@
 		
 	</section>
 
+
 	<!-- FOOTER SECTION 3 -->
-
-	<section>
-		<ul>
-			<li><img src="images/tnflogo.png" alt="North Face logo"></a></li>
-			<li><img src="images/zoeklogo.png" alt="zoekicoon"></a></li>
-			<li><img src="images/taslogo.png" alt="winkeltas"></a></li>				
-			<li><img src="images/menulogo.png" alt="menu"></li>
-		</ul>
-	</section>
-
-	<!-- FOOTER SECTION 4 -->
 	<section>
 		<h2>Abonneer u op onze nieuwsbrief</h2>
 
@@ -320,7 +271,7 @@
 
 	</section>
 
-	<!-- FOOTER SECTION 5 -->
+	<!-- FOOTER SECTION 4 -->
 	<section>
 		<h2>Vind een winkel</h2>
 
@@ -329,20 +280,20 @@
 		<button>Zoek winkel</button>
 	</section>
 
-	<!-- FOOTER SECTION 6 -->
+	<!-- FOOTER SECTION 5 -->
 	<section>
 		<h2>Volg The North Face</h2>
 
 		<ul>
-			<li><img src="images/fbicon.png" alt="winkeltas"></li>
-			<li><img src="images/instaicon.png" alt="winkeltas"></li>
-			<li><img src="images/twittericon.png" alt="winkeltas"></li>
-			<li><img src="images/yticon.png" alt="winkeltas"></li>
+			<li><img class="invert" src="images/fbicon.png" alt="facebook"></li>
+			<li><img class="invert" src="images/instaicon.png" alt="instagram"></li>
+			<li><img class="invert" src="images/twittericon.png" alt="twitter"></li>
+			<li><img class="invert" src="images/yticon.png" alt="youtube"></li>
 		</ul>
 
 	</section>
 
-	<!-- FOOTER SECTION 7 -->
+	<!-- FOOTER SECTION 6 -->
 	<section>
 		<h2 class="visually-hidden">FAQ</h2>
 
