--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Uri Onderwijzer FED2425</title>
+	<title>UriFED Home</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link href="styles/stylehome.css" rel="stylesheet">
@@ -14,149 +14,130 @@
 </head>
 
 <body>
+<header>
 
-	<header>
-
-		<!-- HAMBURGER MENU -->
-    
-		<nav>
-			<details>
-				<summary>Heren <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-					<ul>
-					  <li>Shop Alle Heren</li>
-					  <li>Nieuwe aanwinsten</li>
-					  <li>Bestsellers</li>
-					  <li>Bundels</li>
-					  <li>Nieuwste collecties</li>
-					  <li>Cadeaus voor hem</li>
-					  <li>Jassen</li>
-					  <li>Tops</li>
-					  <li>Broeken</li>
-					  	<details>
-						<summary>Schoenen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-							<ul>
-						  		<li>Shop Alle Schoenen</li>
-						  		<li>Wandel- en trekkingsschoenen</li>
-						  		<li>Trail- & Hardloopschoenen</li>
-								<li>Casual boots & Schoenen</li>
-						  		<li>Badslippers, Sandalen & Instappers</li>
-						  		<li><a href="page2index.html" aria-label="productpage">Winterschoenen</a></li>
-							</ul>
-					  	</details>
-					  <li>Accessoires</li>
-					  <li>Activiteiten</li>
-					  <li>Collecties</li>
-					  <li>Outlet</li>
-					</ul>
-			</details>
-			
-			<details>
-				<summary>Dames <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-					<ul>
-					  <li>Track jouw Order</li>
-					  <li>Verzending</li>
-					  <li>Retourneren</li>
-					  <li>Korting voor studenten</li>
-					</ul>
-			</details>
-			
-			<details>
-				<summary>Kinderen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-					<ul>
-					  <li>Contact</li>
-					  <li>Veelgestelde Vragen</li>
-					  <li>Garantie</li>
-					  <li>Gebruikersvoorwaarden</li>
-					  <li>Privacybeleid</li>
-					  <li>Maattabellen</li>
-					  <li>Cookievoorkeuren</li>
-					  <li>Conformiteitsverklaring</li>
-					</ul>
-			</details>
-		</nav>
-		
-	<!-- EINDE HAMBURGER MENU -->
-
-
-
-
-		<nav>
+<!-- HAMBURGER MENU -->
+	<nav>
+		<details>
+		<summary>Heren <img class="invert" src="images/dropdownicon.png" alt=""></summary>
 			<ul>
-				<li><a href="index.html" aria-label="Homepage"><img class="invert" src="images/tnflogo.png" alt=""></a></li>
-				<li><a href="#" aria-label="zoekicoon"></a><img class="invert" src="images/zoeklogo.png" alt=""></li>
-				<li><a href="#" aria-label="winkelwagen"></a><img class="invert" src="images/taslogo.png" alt=""></li>	
-
-				<li><a href="#" aria-label="Hamburgermenu"></a>
-					<!-- <img src="images/menulogo.png" alt=""> -->
-					<svg class="invert" width="176" height="134" viewBox="0 0 176 134" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M5.17151 133.075H170.172C171.63 133.075 173.029 132.496 174.061 131.464C175.092 130.433 175.672 129.034 175.672 127.575C175.672 126.117 175.092 124.718 174.061 123.686C173.029 122.655 171.63 122.075 170.172 122.075H5.17151C3.71282 122.075 2.31387 122.655 1.28242 123.686C0.250973 124.718 -0.328491 126.117 -0.328491 127.575C-0.328491 129.034 0.250973 130.433 1.28242 131.464C2.31387 132.496 3.71282 133.075 5.17151 133.075Z" fill="#231F20"/>
-						<path d="M38.8253 72.7368H170.5C171.959 72.7368 173.358 72.1573 174.389 71.1259C175.421 70.0944 176 68.6955 176 67.2368C176 65.7781 175.421 64.3791 174.389 63.3477C173.358 62.3162 171.959 61.7368 170.5 61.7368H38.8253C37.3666 61.7368 35.9677 62.3162 34.9362 63.3477C33.9048 64.3791 33.3253 65.7781 33.3253 67.2368C33.3253 68.6955 33.9048 70.0944 34.9362 71.1259C35.9677 72.1573 37.3666 72.7368 38.8253 72.7368Z" fill="#231F20"/>
-						<path d="M67.8842 11.9247H170.348C171.807 11.9247 173.206 11.3452 174.237 10.3138C175.269 9.28232 175.848 7.88337 175.848 6.42467C175.848 4.96598 175.269 3.56704 174.237 2.53559C173.206 1.50414 171.807 0.924683 170.348 0.924683H67.8842C66.4255 0.924683 65.0265 1.50414 63.9951 2.53559C62.9636 3.56704 62.3842 4.96598 62.3842 6.42467C62.3842 7.88337 62.9636 9.28232 63.9951 10.3138C65.0265 11.3452 66.4255 11.9247 67.8842 11.9247Z" fill="#231F20"/>
-						</svg>						
-				</li>
-
+				<li>Shop Alle Heren</li>
+				<li>Nieuwe aanwinsten</li>
+				<li>Bestsellers</li>
+				<li>Bundels</li>
+				<li>Nieuwste collecties</li>
+				<li>Cadeaus voor hem</li>
+				<li>Jassen</li>
+				<li>Tops</li>
+				<li>Broeken</li>
+			</ul> 
+	<!-- SUMMARY IN DE SUMMARY -->			
+	  	<details>
+			<summary>Schoenen <img class="invert" src="images/dropdownicon.png" alt=""></summary>
+				<ul>
+					<li>Shop Alle Schoenen</li>
+					<li>Wandel- en trekkingsschoenen</li>
+					<li>Trail- & Hardloopschoenen</li>
+					<li>Casual boots & Schoenen</li>	
+			  		<li>Badslippers, Sandalen & Instappers</li>
+			  		<li><a href="page2index.html" aria-label="productpage">Winterschoenen</a></li>
+				</ul>
+	  		</details>
+				<li>Accessoires</li>
+				<li>Activiteiten</li>
+				<li>Collecties</li>
+				<li>Outlet</li>
 			</ul>
-		</nav>
-	</header>	
+		</details>
+			
+		<details>
+		<summary>Dames <img class="invert" src="images/dropdownicon.png" alt=""></summary>
+			<ul>
+				<li>Nieuwe aanwinsten</li>
+				<li>Bestsellers</li>
+				<li>Nieuwste collecties</li>
+			</ul>
+		</details>
+			
+		<details>
+		<summary>Kinderen <img class="invert" src="images/dropdownicon.png" alt=""></summary>
+			<ul>
+				<li>New & trending</li>
+				<li>Jongens (7-16 jaar)</li>
+				<li>Meisjes (7-16 jaar)</li>
+			</ul>
+		</details>
+	</nav>
+		
+<!-- EINDE HAMBURGER MENU -->
 
-	<main>
+<!-- HEADER -->
+	<nav>
+		<ul>
+			<li><a href="index.html" aria-label="Homepage"><img class="invert" src="images/tnflogo.png" alt=""></a></li>
+			<li><a href="#" aria-label="zoekicoon"></a><img class="invert" src="images/zoeklogo.png" alt=""></li>
+			<li><a href="#" aria-label="winkelwagen"></a><img class="invert" src="images/taslogo.png" alt=""></li>	
+			<li><a href="#" aria-label="Hamburgermenu"></a>
+			<svg class="invert" width="176" height="134" viewBox="0 0 176 134" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M5.17151 133.075H170.172C171.63 133.075 173.029 132.496 174.061 131.464C175.092 130.433 175.672 129.034 175.672 127.575C175.672 126.117 175.092 124.718 174.061 123.686C173.029 122.655 171.63 122.075 170.172 122.075H5.17151C3.71282 122.075 2.31387 122.655 1.28242 123.686C0.250973 124.718 -0.328491 126.117 -0.328491 127.575C-0.328491 129.034 0.250973 130.433 1.28242 131.464C2.31387 132.496 3.71282 133.075 5.17151 133.075Z" fill="#231F20"/>
+				<path d="M38.8253 72.7368H170.5C171.959 72.7368 173.358 72.1573 174.389 71.1259C175.421 70.0944 176 68.6955 176 67.2368C176 65.7781 175.421 64.3791 174.389 63.3477C173.358 62.3162 171.959 61.7368 170.5 61.7368H38.8253C37.3666 61.7368 35.9677 62.3162 34.9362 63.3477C33.9048 64.3791 33.3253 65.7781 33.3253 67.2368C33.3253 68.6955 33.9048 70.0944 34.9362 71.1259C35.9677 72.1573 37.3666 72.7368 38.8253 72.7368Z" fill="#231F20"/>
+				<path d="M67.8842 11.9247H170.348C171.807 11.9247 173.206 11.3452 174.237 10.3138C175.269 9.28232 175.848 7.88337 175.848 6.42467C175.848 4.96598 175.269 3.56704 174.237 2.53559C173.206 1.50414 171.807 0.924683 170.348 0.924683H67.8842C66.4255 0.924683 65.0265 1.50414 63.9951 2.53559C62.9636 3.56704 62.3842 4.96598 62.3842 6.42467C62.3842 7.88337 62.9636 9.28232 63.9951 10.3138C65.0265 11.3452 66.4255 11.9247 67.8842 11.9247Z" fill="#231F20"/></svg>						
+			</li>
+		</ul>
+	</nav>
+</header>	
 
-
+<main>
 <!-- MAIN SECTION TYPE 1 -->
 <section> 
+	<video controls>
+	<source src="images/videotnf.mp4" type="video/mp4"></video>
+	<h1>We Play Different</h1>
+	<p>The North Face® Offtrail GORE-TEX®</p>
 
-		<video controls>
-			<source src="images/videotnf.mp4" type="video/mp4">
-		  </video>
-
-		<h1>We Play Different</h1>
-
-		<p>The North Face® Offtrail GORE-TEX®</p>
-
-
-
-		<button>Heren</button>
-		<button>Dames</button>
+	<button>Heren</button>
+	<button>Dames</button>
 </section>
 
 <!-- MAIN SECTION TYPE 2 -->
 <section>
-		<img src="images/main-foto2.png" alt="main foto 2">
+	<img src="images/main-foto2.png" alt="vrouw die berg beklimt">
 
-		<h2>Buitenlagen voor veranderend weer</h2>
+	<h2>Buitenlagen voor veranderend weer</h2>
 
-		<button>Dames</button>
-		<button>Heren</button>
+	<button>Dames</button>
+	<button>Heren</button>
 </section>
 
 <!-- MAIN SECTION TYPE 3 -->
 <section>
-		<h2 class="visually-hidden">Producten voor kinderen</h2>
+	<h2 class="visually-hidden">Producten voor kinderen</h2>
 
-		<img src="images/main-foto3.png" alt="2 kinderen die een jas dragen">
+	<img src="images/main-foto3.png" alt="2 kinderen die een jas dragen">
 
-		<p>Ingepakt en klaar om op avontuur te gaan.</p>
+	<p>Ingepakt en klaar om op avontuur te gaan.</p>
 
-		<button>Jongens</button>
-		<button>Meisjes</button>
+	<button>Jongens</button>
+	<button>Meisjes</button>
 </section>
 
 <!-- MAIN SECTION TYPE 4 -->
 <section>
 	<h2 class="visually-hidden">Fleecejassen</h2>
 
-		<img src="images/main-foto4.png" alt="Jongen die een fleecejas draagt">
+	<img src="images/main-foto4.png" alt="Jongen die een fleecejas draagt">
 
-		<p>Welkom bij het fleeceseizoen.</p>
+	<p>Welkom bij het fleeceseizoen.</p>
 
-		<button>Heren</button>
-		<button>Dames</button>
+	<button>Heren</button>
+	<button>Dames</button>
 </section>
 
 <!-- MAIN SECTION TYPE 5 carrousel -->
 <section>
 	<h2 class="visually-hidden">Carrousel met verschillende producten</h2>
-		<ul>
+	<!-- CARROUCEL -->
+	<ul>
 		<li>
 			<img src="images/crfoto1.png" alt="Carroucel foto van een jongen die een jas draagt">
 			<button>Triclimate heren</button>
@@ -166,162 +147,134 @@
 			<button>Jassen voor heren</button>
 		</li>
 		<li>
-			<img src="images/crfoto3.png" alt="Carroucel foto van een jongen die een jas draagt">
+			<img src="images/crfoto3.png" alt="Carroucel foto van een meisje die een jas draagt">
 			<button>Jassen voor dames</button>
 		</li>
 		<li>
-			<img src="images/crfoto4.png" alt="Carroucel foto van een jongen die een jas draagt">
+			<img src="images/crfoto4.png" alt="Carroucel foto van een schoenen">
 			<button>Schoenen</button>
 		</li>
-		</ul>
-
+	</ul>
 </section>
-
-
 </main>
 
 <footer>
-
-	<!-- HOOFDLETTERS VIA CSS -->
-
 	<!-- FOOTER SECTION 1 -->
+<section>
+	<h2>Word lid van XPLR Pass</h2>
 
-	<section>
-		<h2>Word lid van XPLR Pass</h2>
+	<p>Doe mee met ons lidmaadschapsprogramma.</p>
 
-		<p>Doe mee met ons lidmaadschapsprogramma.</p>
+	<button>Word lid nu</button>
+</section>
 
-		<button>Word lid nu</button>
-	</section>
-
-
-
-	<!-- FOOTER SECTION 2 -->
-	<section>
-		<h2 class="visually-hidden">Dropdowns</h2>
-
-		<details>
-			<summary>Winkelen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-				<ul>
-				  <li>Heren</li>
-				  <li>Dames</li>
-				  <li>Kids</li>
-				  <li>Tassen & Uitrusting</li>
-				  <li>Schoenen</li>
-				</ul>
-		</details>
-		
-		<details>
-			<summary>Bestellingen <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-				<ul>
-				  <li>Track jouw Order</li>
-				  <li>Verzending</li>
-				  <li>Retourneren</li>
-				  <li>Korting voor studenten</li>
-				</ul>
-		</details>
-		
-		<details>
-			<summary>Help <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-				<ul>
-				  <li>Contact</li>
-				  <li>Veelgestelde Vragen</li>
-				  <li>Garantie</li>
-				  <li>Gebruikersvoorwaarden</li>
-				  <li>Privacybeleid</li>
-				  <li>Maattabellen</li>
-				  <li>Cookievoorkeuren</li>
-				  <li>Conformiteitsverklaring</li>
-				</ul>
-		</details>
-		
-		<details>
-			<summary>Over ons <img class="invert" src="images/dropdownicon.png" alt="Pijl omlaag"></summary>
-				<ul>
-				  <li>Onze Geschiedenis</li>
-				  <li>Duurzaamheid</li>
-				  <li>Sporters</li>
-				  <li>Technologie</li>
-				  <li>Word Lid Van XPLR Pass</li>
-				  <li>The North Face Pro Programme</li>
-				  <li>Werken Bij The North Face</li>
-				</ul>
-		</details>
-		
-	</section>
-
-
-	<!-- FOOTER SECTION 3 -->
-	<section>
-		<h2>Abonneer u op onze nieuwsbrief</h2>
-
-		<p>Ontvang productnieuws en updates in je inbox</p>
-
-		<form>
-			<label for="email"></label>
-			<input type="email" id="email" name="email" placeholder="E-mailadres*" required>
-		</form>
-
-		<input type="checkbox" id="myCheckbox">
-		<label for="myCheckbox">Ik bevestig dat ik het privacybeleid heb gelezen en begrepen en 
-			ik geef toestemming voor de verwerking van mijn persoonlijke gegevens voor marketing- 
-			en profileringsdoeleinden.*</label>
-
-		<button>Schrijf Je In</button>
-
-	</section>
-
-	<!-- FOOTER SECTION 4 -->
-	<section>
-		<h2>Vind een winkel</h2>
-
-		<p>Vind een The North Face winkel in de buurt</p>
-
-		<button>Zoek winkel</button>
-	</section>
-
-	<!-- FOOTER SECTION 5 -->
-	<section>
-		<h2>Volg The North Face</h2>
-
+<!-- FOOTER SECTION 2 -->
+<section>
+	<h2 class="visually-hidden">Dropdowns</h2>
+<!-- DROPDOWNS -->
+	<details>
+	<summary>Winkelen <img class="invert" src="images/dropdownicon.png" alt=""></summary>
 		<ul>
-			<li><img class="invert" src="images/fbicon.png" alt="facebook"></li>
-			<li><img class="invert" src="images/instaicon.png" alt="instagram"></li>
-			<li><img class="invert" src="images/twittericon.png" alt="twitter"></li>
-			<li><img class="invert" src="images/yticon.png" alt="youtube"></li>
+			<li>Heren</li>
+			<li>Dames</li>
+			<li>Kids</li>
+			<li>Tassen & Uitrusting</li>
+			<li>Schoenen</li>
 		</ul>
+	</details>
+		
+	<details>
+	<summary>Bestellingen <img class="invert" src="images/dropdownicon.png" alt=""></summary>
+		<ul>
+			<li>Track jouw Order</li>
+			<li>Verzending</li>
+			<li>Retourneren</li>
+			<li>Korting voor studenten</li>
+		</ul>
+	</details>
+		
+	<details>
+	<summary>Help <img class="invert" src="images/dropdownicon.png" alt=""></summary>
+		<ul>
+			<li>Contact</li>
+			<li>Veelgestelde Vragen</li>
+			<li>Garantie</li>
+			<li>Gebruikersvoorwaarden</li>
+			<li>Privacybeleid</li>
+			<li>Maattabellen</li>
+			<li>Cookievoorkeuren</li>
+			<li>Conformiteitsverklaring</li>
+		</ul>
+	</details>
+		
+	<details>
+	<summary>Over ons <img class="invert" src="images/dropdownicon.png" alt=""></summary>
+		<ul>
+			<li>Onze Geschiedenis</li>
+			<li>Duurzaamheid</li>
+			<li>Sporters</li>
+			<li>Technologie</li>
+			<li>Word Lid Van XPLR Pass</li>
+			<li>The North Face Pro Programme</li>
+			<li>Werken Bij The North Face</li>
+		</ul>
+	</details>
+</section>
 
-	</section>
+<!-- FOOTER SECTION 3 -->
+<section>
+	<h2>Abonneer u op onze nieuwsbrief</h2>
 
-	<!-- FOOTER SECTION 6 -->
-	<section>
-		<h2 class="visually-hidden">FAQ</h2>
+	<p>Ontvang productnieuws en updates in je inbox</p>
 
+<!-- INVULVAK & CHECKBOX -->
+	<form>
+		<label for="email"></label>
+		<input type="email" id="email" name="email" placeholder="E-mailadres*" required>
+	</form>
+
+	<input type="checkbox" id="myCheckbox">
+		<label for="myCheckbox">Ik bevestig dat ik het privacybeleid heb gelezen en begrepen en 
+		ik geef toestemming voor de verwerking van mijn persoonlijke gegevens voor marketing- 
+		en profileringsdoeleinden.*</label>
+
+	<button>Schrijf Je In</button>
+</section>
+
+<!-- FOOTER SECTION 4 -->
+<section>
+	<h2>Vind een winkel</h2>
+
+	<p>Vind een The North Face winkel in de buurt</p>
+
+	<button>Zoek winkel</button>
+</section>
+
+<!-- FOOTER SECTION 5 -->
+<section>
+	<h2>Volg The North Face</h2>
+		<ul>
+			<li><a href="#" aria-label="facebook"></a><img class="invert" src="images/fbicon.png" alt=""></li>
+			<li><a href="#" aria-label="instagram"></a><img class="invert" src="images/instaicon.png" alt=""></li>
+			<li><a href="#" aria-label="twitter"></a><img class="invert" src="images/twittericon.png" alt=""></li>
+			<li><a href="#" aria-label="youtube"></a><img class="invert" src="images/yticon.png" alt=""></li>
+		</ul>
+</section>
+
+<!-- FOOTER SECTION 6 -->
+<section>
+	<h2 class="visually-hidden">FAQ</h2>
 		<ul>
 			<li>NL | Wijzig Land</li>
 			<li>Privacy Policy</li>
 			<li>Gebruikersvoorwaarden</li>
 		</ul>
-
-		<label>
-			<input type="radio" name="theme" value="auto" checked> auto
-		   </label>
-		   <label>
-		   <input type="radio" name="theme" value="light"> licht
-		   </label>
-		   <label>
-			<input type="radio" name="theme" value="dark"> donker
-		</label> 
 		
-		<a href="page2index.html">2epage</a>
-
-	</section>
-
+	<a href="page2index.html">2epage</a>	
+</section>
 </footer>
 
-
-
-	<script defer src="scripts/script.js"></script>
+<script defer src="scripts/script.js"></script>
 </body>
 	
 </html>
